fixed column layout issue

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -90,7 +90,10 @@ section {
  *  callouts, the sidebar sections, the products lists and so on.
  *****************************************************************************/
 app-header {
-  background: #FFC107; }
+  background: #fff;
+  -webkit-box-shadow: 0px 0px 9px 1px rgba(0, 0, 0, 0.48);
+  -moz-box-shadow: 0px 0px 9px 1px rgba(0, 0, 0, 0.48);
+  box-shadow: 0px 0px 9px 1px rgba(0, 0, 0, 0.48); }
 
 #main-title {
   padding-left: 20px; }
