--- a/app/styles/sass/base/_vars.scss
+++ b/app/styles/sass/base/_vars.scss
@@ -22,4 +22,4 @@ $deep-orange-500: #FF5722;
 $green-A100: #B9F6CA;
 
 // nav colors
-$app-header-background-color: $amber-500;
+$app-header-background-color: #fff;
