--- a/app/styles/sass/modules/_nav.scss
+++ b/app/styles/sass/modules/_nav.scss
@@ -1,6 +1,6 @@
 app-header {
   background: $app-header-background-color;
-  // @include box-shadow(inset 0px 0px 9px 1px rgba(0,0,0,0.48));
+  @include box-shadow(0px 0px 9px 1px rgba(0,0,0,0.48));
 }
 
 #main-title {
